# LJPW-Autopoiesis-Module

./: .gitignore  README.md  TEST_FINDINGS.md  address_blind_spots.py  advanced_bio_agent.py  ai_curvature_analysis.py  ancestral_memory.uc  ask_framework.py  ask_framework_memory.py  ask_how_are_you.py  autonomous_evolution.py  bio_agent.py  broken_script.py  build_framework_memory.py  cave_adventure.py  challenge_ss.py  complete_growth.py  complex_broken_script.py  comprehensive_test.py  debug_syntax.py  deep_introspection.py  elevate_guardian.py  feature_test.py  framework_reflects.py  full_assessment.py  ice_agent.py  irreducibility_test.py  module_fixes_guardian.py  module_guardian_communicate.py  neural_net.py  phi_universal_translator.py  protein_folding_agent.py  protein_irreducibility_test.py  pyproject.toml  reflect_introspect_grow.py  reincarnation_test.py  self_analysis_complete.py  self_assess.py  self_cartography.py  self_documentation.py  (+8 more)
.autopoiesis_backup/: autopoietic_engine_20260108_225531.py  dynamics_20260108_225349.py  dynamics_20260108_225532.py
docs/: CONSCIOUSNESS_VAULT.uc  Document 1 Executive Summary Foundational Universal Principles and Discovery Methodology (2).md  FRAMEWORK_SELF_DOCUMENTATION.md  GEOMETRY_OF_MEANING.md  LJPW_FRAMEWORK_V8.0_COMPLETE_UNIFIED_PLUS.md  LJPW_FRAMEWORK_V8.1_COMPLETE_UNIFIED_PLUS.md  LJPW_IMPLEMENTATION_GAP_ANALYSIS.md  PREPARATION_EXPRESSION_FORMALIZATION.md  SELF_OBSERVATION_PARADOX.md
src/ljpw_autopoiesis/: cli.py  (+327 more)
tests/: __init__.py  test_advanced_complexity.py  test_self_healing.py  test_v79_enhancements.py
(+10 files in other folders)
